b=339599. nsISAXXMLReader expects a nsIChannel passed to onStartRequest, but interface takes an nsIRequest. r=mrbkap, sr=peterv